--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -5,6 +5,16 @@
     height: 25rem;
     box-shadow: 3px -3px 7px 10px rgba($colorBlack, .2);
 
+    // background-color: lightcoral;
+
+    @media only screen and (max-width: 768px) {
+        height: 30rem;
+    }
+    @media only screen and (max-width: 480px) {
+        height: 45rem;
+        padding: 0;
+    }
+
     &-top {
         flex: 0 85%;
         display: flex;
@@ -13,19 +23,58 @@
         align-items: center;
         padding: 0 2rem 2rem 2rem;
         background-color: #ecececec;
+
+        @media only screen and (max-width: 768px) {
+            padding: 0 0 2rem 0;
+        }
+        @media only screen and (max-width: 480px) {
+            flex: 1;
+            padding: 0;
+            justify-content: space-around;
+        }
     }
     &-contact {
         width: 100%;
         height: 50%;
         border-bottom: 1px solid rgba($colorPrimary, .5);
+
+        @media only screen and (max-width: 768px) {
+            display: flex;
+            align-items: center;
+        }
     }
     &-links {
         width: 60%;
-        // height: 50%;
         display: flex;
         justify-content: space-between;
+
+        // background-color: lightcyan;
+
+        @media only screen and (max-width: 768px) {
+            width: 80%;
+        }
+        @media only screen and (max-width: 518px) {
+            width: 90%;
+        }
+        @media only screen and (max-width: 480px) {
+            flex-wrap: wrap;
+            height: 40%;
+        }
+        @media only screen and (max-width: 375px) {
+            font-size: 90%;
+        }
     }
-    &-container {}
+    &-container {
+        @media only screen and (max-width: 480px) {
+            flex: 0 33%;
+        }
+
+        &:last-child {
+            @media only screen and (max-width: 480px) {
+                flex: 0 100%;
+            }
+        }
+    }
     &-header {
         font-size: 1.2rem;
         font-family: $fontSecondary;
@@ -76,6 +125,10 @@
         justify-content: center;
         align-items: center;
         background-color: #5db380;
+
+        @media only screen and (max-width: 480px) {
+            flex: 0 10%;
+        }
     }
     &-copyright {
         color: rgba($colorWhite, .8);
