--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import './base/base';
 @import './base/typography';
 @import './base/utilities';
+@import './base/animations';
 
 /********* layouts *********/
 @import './layouts/header';
