--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -12,7 +12,6 @@
         height: 30rem;
         padding: 1rem 3rem;
     }
-
     @media only screen and (max-width: 480px) {
         height: 45rem;
         padding: 1rem;
@@ -40,8 +39,13 @@
             height: 80%;
         }
         @media only screen and (max-width: 480px) {
+            flex: 0 40%;
             align-items: center;
             text-align: center;
+        }
+        @media only screen and (max-width: 375px) {
+            // height: 50%;
+            flex: 0 50%;
         }
     }
     &-right {
